--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,11 @@
         </tfoot>
     </table>
 
+
     <script src="js/app/models/Negociacao.js"></script>
+
+    <script src="js/lib/index.js"></script>
+
 
     <script>
 
